# OpenGL-project

./: .gitignore  CMakeLists.txt
src/: camera.cpp  camera.h  constants.h  entity.cpp  entity.h  lab1_cube.h  lab4_character.cpp  particle_generator.cpp  particle_generator.h  skybox.cpp  skybox.h  terrain.cpp  terrain.h  tiny_gltf.cpp
src/model/: fir.gltf  oak.gltf
src/model/bird/: bird.gltf
src/model/flop/: gas.gltf
src/model/fox/: Fox.gltf
src/model/gas/: gas2.gltf
src/model/goose/: goose.gltf
src/model/low/: low.gltf  oak.gltf
src/model/oak/: oak.gltf
src/model/pine/: pine_tree_01_1k.gltf
src/model/quad/: quad.gltf
src/model/rubbber/: untitled.gltf
src/model/tmp/: bird.gltf
src/model/tree_oak/: license.txt  oak.gltf  scene.gltf
src/model/walk/: bot.gltf
src/render/: shader.cpp  shader.h
src/shader/: bot.frag  bot.vert  deferred.frag  depth.vert  depthBot.vert  depthTree.vert  geometry-bot.vert  geometry-terrain.vert  geometry-tree.vert  geometry.frag  particle.frag  particle.vert  skybox.frag  skybox.vert  terrain.frag  terrain.vert  tree.frag  tree.vert
